Assorted java 9 updates